<resources>
    <string name="app_name">韓Tube</string>
    <string name="PlayVideo">Play Vedio!</string>
    <string name="final_project">期末專案</string>
    <string name="add_newVideo">Add Video</string>
    <string name="share_video">Share This Video</string>
    <string name="textview">TextView</string>
    <string name="Videoid">Youtube Video URL:</string>
    <string name="startTime">Start Time:</string>
    <string name="hour">h</string>
    <string name="min">m</string>
    <string name="sec">s</string>
    <string name="blank" />
    <string name="videoName">Video Name:</string>
    <string name="note">Note:</string>
    <string name="zero">0</string>
    <string name="get_id_and_name">get id</string>
    <string name="name">Name:</string>
    <string name="get_name">GET VIDEO NAME</string>
    <string name="internet_warn">警告:沒有網路，疑似是國家機器動起來了</string>
    <string name="icon">icon</string>
    <string name="Hant">韓市長提醒您:左右滑動可以刪除項目，雙擊項目可以編輯該項目!</string>
    <string name="or_v">or video ID</string>
    <string name="autoPlay">Auto Play  </string>
</resources>
