<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <view
        android:id="@+id/YoutubeView"
        class="com.google.android.youtube.player.YouTubePlayerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:id="@+id/other_views"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="25dp"
        android:weightSum="1">


        <Button
            android:id="@+id/share_video"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#3F51B5"
            android:text="@string/share_video"
            android:textColor="#FFFFFF" />

        <Switch
            android:id="@+id/autoPlay"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:gravity="center_vertical|end"
            android:text="@string/autoPlay" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/otherRecycler"
            android:layout_width="match_parent"
            android:layout_height="250dp">

        </androidx.recyclerview.widget.RecyclerView>

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Hant"
            android:textAlignment="center"
            android:textSize="12sp" />

        <Button
            android:id="@+id/add_video"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_newVideo" />

    </LinearLayout>
</LinearLayout>